# sigma-rangeproof

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
audits/: 2026-06-10-copilot-agent.md  2026-06-10-copilot-verification-0.1.2.md  2026-06-10-static-self-review.md  README.md  llm-audit-prompt.md
docs/: api.md  audit.md  background.md  code.md  index.md  range-proof.md  related-work.md  requirements.txt  security.md  sigma-protocols.md  spec.md
examples/: demo.ipynb
logo/: README.md  generate_sigma_rangeproof_icon.py
src/sigma_rangeproof/: __init__.py  group.py  pedersen.py  rangeproof.py  transcript.py
tests/: test_adversarial.py  test_fuzz.py  test_kat.py  test_rangeproof.py
tests/vectors/: generate_vectors.py  kat.json
