[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-rangeproof"
version = "0.1.0"
description = "Dependency-free zero-knowledge range proofs (prove value >= threshold over a Pedersen commitment) via a Sigma-protocol bit decomposition."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MailQ" }]
keywords = ["zero-knowledge", "zkp", "range-proof", "pedersen", "sigma-protocol", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/boyroywax/sigma-rangeproof"
Source = "https://github.com/boyroywax/sigma-rangeproof"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sigma_rangeproof = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
