[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-rangeproof"
version = "0.1.0"
description = "Dependency-free zero-knowledge range proofs (prove value >= threshold over a Pedersen commitment) via a Sigma-protocol bit decomposition."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MailQ" }]
keywords = ["zero-knowledge", "zkp", "range-proof", "pedersen", "sigma-protocol", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/boyroywax/sigma-rangeproof"
Source = "https://github.com/boyroywax/sigma-rangeproof"

[project.optional-dependencies]
dev = ["pytest>=7", "hypothesis>=6", "ruff>=0.6", "build>=1.2", "twine>=5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
extend-exclude = ["*.ipynb"]   # notebooks are demo material, not library code

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/sigma_rangeproof/__init__.py" = ["F401"]

[tool.setuptools.package-data]
sigma_rangeproof = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
